variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: type int
var nbpas:int=0
          ^