variables.Variables.scala.code
var nbpas:int=0

while (estSurBiscuit()==true) {
  nbpas=nbpas+1
  avance()
}